<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/messageTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_caution1"
        android:textSize="24dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/messageTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/take_caution2"
        android:textSize="20dp"
        android:textColor="@android:color/black"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="24dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>