<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultFragment">
<!--    android:background=""-->

    <!-- TODO: Update blank fragment layout -->
<!--android:layout_width="206dp"
        android:layout_height="237dp"-->
    <LinearLayout
        android:id="@+id/q_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/darksalmon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="8dp">
        <TextView
            android:id="@+id/q_img_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/q_img"
            android:textSize="30dp"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            tools:src="@tools:sample/avatars"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/t_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/aquamarine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/q_img"
        android:elevation="8dp">

        <TextView
            android:id="@+id/t_img_txt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/t_img"
            android:textSize="30dp"
            android:layout_weight="1"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            tools:src="@tools:sample/avatars"
            android:layout_weight="3"/>

    </LinearLayout>


    <TextView
        android:id="@+id/score_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/result"
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t_img"
        android:elevation="1dp"/>

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginTop="16dp"
        android:text=""
        android:textSize="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_is"
        android:elevation="1dp"/>

    <ProgressBar
        android:id="@+id/r_progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/btn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_title"
        android:layout_marginTop="16dp"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/r_progressBar"
        android:elevation="1dp"/>

    <Button
        android:id="@+id/btn_toRanking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="80dp"
        android:text="@string/to_ranking"
        android:textSize="20dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_title"
        android:elevation="1dp"/>

    <!-- 背景の手前に枠を追加 -->
<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:background="@color/cornsilk"-->
<!--        android:layout_margin="18dp"-->
<!--        android:elevation="8dp"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>