<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cornsilk"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    android:layout_gravity="center_horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:id="@+id/q_img"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:background="@color/darksalmon"
            android:elevation="8dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/q_img_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginStart="30dp"
                android:text="@string/q_img"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                tools:src="@tools:sample/avatars" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/t_img"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            android:background="@color/aquamarine"
            android:elevation="8dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/t_img_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="30dp"
                android:gravity="center_horizontal"
                android:text="@string/t_img"
                android:textSize="30dp" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                tools:src="@tools:sample/avatars" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/score_is"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/result"
        android:textSize="40dp"
        android:elevation="1dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>